src/css/exercises.css
.content-filter-container {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 20px;
  
  width: 100%;
  padding-bottom: 20px;
}

.filter-title-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: flex-end;
  gap: 8px;
}

.filter-title {
  color: var(--primary-dark-color);
  font-size: 28px;
  line-height: 1.36;
  letter-spacing: -0.56px;
  white-space: nowrap;
}

.filter-subtitle {
  color: var(--filter-exercise-subtitle-color);
  text-transform: capitalize;
  font-size: 20px;
  line-height: 1;
  letter-spacing: -0.4px;
  padding-bottom: 5px;
}

.js-title-slash {
  display: inline-block;
}

.js-title-slash.is-hide {
  display: none;
}

.filter-block {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 40px;
  padding: 0;
}

.form-search-exersises.is-hide {
  display: none;
}

.form-search-exersises {
  display: block;
  position: relative;
  max-width: 273px;
  width: 100%;
  height: 48px;
}

.input-search-exersises {
  margin-top: 20px;
  width: 100%;
  height: 100%;
  padding: 12px 12px 12px 14px;
  align-items: center;
  border-radius: 30px;
  border: 1px solid var(--border-color);
  color: var(--primary-dark-color);
  outline: none;
  background-color: transparent;

  font-size: 14px;
  line-height: 1.43;
}

.input-search-exersises::placeholder {
  color: inherit;
}

.btn-search-wrapper {
  position: absolute;
  z-index: 2;
  width: 44px;
  max-height: 19px;
  height: 100%;
  top: calc(50% + 20px);
  right: 14px;
  transform: translate(0, -50%);
  border: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.btn-search-wrapper:first-child {
  flex-shrink: 0;
}

.btn-search-exersises {
  position: relative;
  display: block;
  padding: 2px;
  width: 19px;
  height: 19px;
  border: none;
  background-color: transparent;
  color: var(--border-color);

  opacity: 1;
  visibility: visible;
  pointer-events: all;
  transition-property: opacity, visibility, pointer-events;
  transition-duration: 0.3s;
  transition-timing-function: ease-in;
}

.icon-search,
.icon-x {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  fill: transparent;
  stroke: currentColor;
}

.icon-x {
  padding: 4px;
  fill: currentColor;
  stroke: currentColor;
}

.btn-search-exersises.is-hide {
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  transition: all 0.3s ease-in;
}

.list-filter-exersises {
  display: flex;
  flex-direction: row;
  gap: 20px;
}

.btn-filter {
  position: relative;
  padding: 0;
  border: none;
  background-color: transparent;
  text-align: center;

  color: var(--inactive-text-color);
  font-size: 14px;
  line-height: 1.43;

  height: 24px;
}

.btn-filter::after {
  content: '';
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  bottom: -6px;
  left: 0;
  width: 100%;
  height: 4px;
  border-radius: 2px;
  background-color: var(--primary-dark-color);
  opacity: 0;
  transform: scale(0);
  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
}

.btn-filter:hover::after {
  opacity: 1;
  transform: scale(1);
}

.btn-filter.active {
  color: var(--primary-dark-color);

  &::after {
    opacity: 1;
    transform: scale(1);
  }
}


.content {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
}

@media screen and (min-width: 768px) {
  .content-filter-container {
    gap: 32px;
  }

  .filter-title-container {
    align-items: flex-end;
  }

  .filter-title {
    font-size: 44px;
    line-height: 1.09;
    letter-spacing: -0.88px;
  }

  .filter-subtitle {
    font-size: 24px;
    line-height: 1.33;
    letter-spacing: -0.48px;
    padding-bottom: 0;
  }

  .filter-block {
    flex-wrap: nowrap;
    width: 100%;
    justify-content: space-between;
    align-items: center;
    gap: 0;
    padding-bottom: 32px;
  }

  .input-search-exersises {
    margin-top: 0;
    font-size: 16px;
    line-height: 1.5;
  }

  .btn-search-wrapper {
    top: 50%;
  }

  .list-filter-exersises {
    justify-content: center;
    align-items: flex-start;
    transform: translate(0, -20%);
  }

  .btn-filter {
    font-size: 16px;
    line-height: 1.5
  }

  
.content {
  gap: 32px 16px;
}
}

@media screen and (min-width: 1440px) {
  .content-filter-container {
    gap: 0;
    flex-wrap: nowrap;
    justify-content: space-between;
  }

  .filter-title {
    font-size: 28px;
    line-height: 1.36;
    letter-spacing: -0.56px;
    color: #242424;
  }

  .filter-subtitle {
    font-size: 20px;
    line-height: 1.0;
    letter-spacing: -0.4px; 
    padding-bottom: 6px;
  }

  .filter-block {
    justify-content: flex-end;
    align-items: center;
    gap: 30px;
  }


  .form-search-exersises {
    display: flex;
  }

  .input-search-exersises {
    width: 273px;
  }

  .item-filter-exersises {
    flex-shrink: 0;
  }

  .content{
    max-width: 902px;
    width: 100%;
  }
}

